<resources>
    <string name="app_name">Pahe.in Premium</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_watchlist">Watchlist</string>
    <string name="sample_title">Movie Name</string>
    <string name="description">Description</string>
    <string name="sample_desc">Movie Description</string>
    <string name="rating">Rating</string>
    <string name="language">Language</string>
    <string name="length">Length</string>
    <string name="watch_movie">Watch Movie</string>
    <string name="vote_format">0.0/10 IMDb</string>
    <string name="length_format">0h 0min</string>
    <string name="search_movie">Search Movie</string>
    <string name="showing_result">Showing Result for "%1$s"</string>
    <string name="empty_search">We couldn\'t show the result. Please try with different keyword</string>
    <string name="discover">Discover your favourite movie</string>
    <string name="now_playing">Now Playing</string>
    <string name="see_more">See more</string>
    <string name="popular">Popular</string>
</resources>