<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.detail.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_backdrop"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_280sdp"
            android:scaleType="centerCrop"
            android:src="@drawable/sample_poster"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_280sdp"
            android:scaleType="centerCrop"
            android:src="@drawable/box_grayscale"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.card.MaterialCardView
        android:layout_marginTop="-60dp"
        app:cardCornerRadius="@dimen/_12sdp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/_24sdp">

            <!-- Title and Save -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/title_big"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginEnd="@dimen/_24sdp"
                    android:text="@string/sample_title" />
                <ImageView
                    android:id="@+id/btn_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:src="@drawable/ic_save"/>
            </RelativeLayout>

            <!-- Voting -->
            <TextView
                android:id="@+id/tv_vote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                style="@style/item_vote_big"
                tools:text="9.1/10 IMDb"/>

            <!-- Genres -->
            <com.google.android.material.chip.ChipGroup
                android:id="@+id/container_genre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                app:chipSpacingHorizontal="@dimen/_8sdp"
                app:chipSpacingVertical="@dimen/_8sdp">

            </com.google.android.material.chip.ChipGroup>

            <!-- Info -->
            <LinearLayout
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/mulish_regular"
                    android:textColor="@color/grey_500"
                    android:text="@string/length"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/mulish_regular"
                    android:textColor="@color/grey_500"
                    android:text="@string/language"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/mulish_regular"
                    android:textColor="@color/grey_500"
                    android:text="@string/rating"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tv_length"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/mulish_semibold"
                    android:textColor="@color/black"
                    tools:text="2h 28min"/>
                <TextView
                    android:id="@+id/tv_lang"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/mulish_semibold"
                    android:textColor="@color/black"
                    android:textAllCaps="true"
                    tools:text="EN"/>
                <TextView
                    android:id="@+id/tv_rating"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/mulish_semibold"
                    android:textColor="@color/black"
                    tools:text="PG-13"/>
            </LinearLayout>

            <!-- Description -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_24sdp"
                android:text="@string/description"
                style="@style/Title1"/>

            <TextView
                android:id="@+id/tv_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:fontFamily="@font/mulish_regular"
                android:textColor="@color/grey_500"
                tools:text="@string/sample_desc"/>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</LinearLayout>