<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".presentation.main.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_24sdp"
            android:layout_marginHorizontal="@dimen/_24sdp"
            android:layout_marginVertical="@dimen/_16sdp"
            android:src="@drawable/logo"
            android:importantForAccessibility="no"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/_24sdp">

            <TextView
                style="@style/Title1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/now_playing" />

            <TextView
                android:id="@+id/btn_nowshowing_seemore"
                style="@style/see_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_gravity="center_vertical"
                android:text="@string/see_more"
                tools:ignore="RelativeOverlap" />
        </RelativeLayout>

        <include
            android:id="@+id/now_playing"
            layout="@layout/layout_home_nowplaying"
            android:visibility="visible" />

        <include
            android:id="@+id/now_playing_load"
            layout="@layout/layout_home_nowplaying_load"
            android:visibility="gone" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_24sdp"
            android:paddingHorizontal="@dimen/_24sdp">

            <TextView
                style="@style/Title1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/popular" />

            <TextView
                android:id="@+id/btn_seemore"
                style="@style/see_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_gravity="center_vertical"
                android:text="@string/see_more"
                tools:ignore="RelativeOverlap" />
        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_popular"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_16sdp"
            android:nestedScrollingEnabled="false"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/popular_load"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:shimmer_auto_start="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <include layout="@layout/item_movie_load" />

                <include layout="@layout/item_movie_load" />

                <include layout="@layout/item_movie_load" />
            </LinearLayout>

        </com.facebook.shimmer.ShimmerFrameLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>